fixed navbar, added CSS

--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
-<!--- reverse engineer of http://codepen.io/ThiagoFerreir4/full/eNMxEp --->
+<!--- reverse engineer of http://codepen.io/ThiagoFerreir4/full/eNMxEp -->
+<!DOCTYPE>
+<html>
+<head>
+<title>"Portfolio Clone"</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<link rel="stylesheet" type = "text/css" href="css/main.css">
+</head>
 
+<body>
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
-        Jason Arnold
-        <button type="button" class="btn btn-default navbar-btn">Home</button>
-        <button type="button" class="btn btn-default navbar-btn">About</button>
-        <button type="button" class="btn btn-default navbar-btn">Portfolio</button>
-        <button type="button" class="btn btn-default navbar-btn">Contact</button>
-      </a>
+      <a class="navbar-brand" href="#">Jason Arnold</a>
+    </div>
+    <div class="navbar-header navbar-right">
+      <ul>
+        <li><button type="button" class="btn btn-default navbar-btn">Home</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn">About</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn">Portfolio</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn">Contact</button></li>
+      </ul>
     </div>
   </div>
 </nav>
+</body>
+</html>
