--- a/index.html
+++ b/index.html
@@ -1,27 +1,91 @@
-<!--- reverse engineer of http://codepen.io/ThiagoFerreir4/full/eNMxEp -->
-<!DOCTYPE>
-<html>
-<head>
-<title>"Portfolio Clone"</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" type = "text/css" href="css/main.css">
-</head>
 
-<body>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Jason Arnold</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+
+    <title>Jumbotron Template for Bootstrap</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  </head>
+
+  <body>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Jason Arnold</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <div class="navbar-right">
+              <button type="button" class="btn">Home</button>
+              <button type="button" class="btn">Portfolio</button>
+              <button type="button" class="btn">Contact</button>
+              <button type="button" class="btn">About</button>
+          </div>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron background-pic" id="about">
+      <div class="container">
+        <h1>Web Design Made Easy</h1>
+        <p>Your ideas now in web form!</p>
+        <hr>
+        <ul>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button">Twitter</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button">GitHub</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button">LinkedIn</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button">FreeCodeCamp</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="navbar-header navbar-right">
-      <ul>
-        <li><button type="button" class="btn btn-default navbar-btn">Home</button></li>
-        <li><button type="button" class="btn btn-default navbar-btn">About</button></li>
-        <li><button type="button" class="btn btn-default navbar-btn">Portfolio</button></li>
-        <li><button type="button" class="btn btn-default navbar-btn">Contact</button></li>
-      </ul>
+    <div class="jumbotron background-pic" id="contact">
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+      </div>
     </div>
-  </div>
-</nav>
-</body>
+
+    <div class="container">
+    <footer>
+      <p>&copy; Company 2014</p>
+    </footer>
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
