added buttons and fa icons

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -41,10 +42,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <div class="navbar-right">
-              <button type="button" class="btn">Home</button>
+              <button type="button" class="btn">About</button>
               <button type="button" class="btn">Portfolio</button>
               <button type="button" class="btn">Contact</button>
-              <button type="button" class="btn">About</button>
           </div>
         </div><!--/.navbar-collapse -->
       </div>
@@ -57,14 +57,14 @@
         <p>Your ideas now in web form!</p>
         <hr>
         <ul>
-          <li><a class="btn btn-primary btn-lg" href="#" role="button">Twitter</a></li>
-          <li><a class="btn btn-primary btn-lg" href="#" role="button">GitHub</a></li>
-          <li><a class="btn btn-primary btn-lg" href="#" role="button">LinkedIn</a></li>
-          <li><a class="btn btn-primary btn-lg" href="#" role="button">FreeCodeCamp</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-twitter"></i>Twitter</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-github-alt"></i>GitHub</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-linkedin"></i>LinkedIn</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fire"></i>FreeCodeCamp</a></li>
         </ul>
       </div>
     </div>
-    <div class="jumbotron background-pic" id="contact">
+    <div class="jumbotron background-pic" id="portfolio">
       <div class="container">
         <h1>Hello, world!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
