added all background images

--- a/index (jarnold's conflicted copy 2015-08-26).html
+++ b/index (jarnold's conflicted copy 2015-08-26).html
@@ -52,7 +52,7 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron background-pic" id="about">
+    <div class="jumbotron background-pic" id="home">
       <div class="container">
         <h1>Jason Arnold</h1>
         <h3>Web Developer</h3>
@@ -65,17 +65,36 @@
         </ul>
       </div>
     </div>
+    <div class="jumbotron background-pic" id="about">
+      <div class="container">
+        <img id="myphoto" src="">
+        <p>I am a self-taught web developer based in NYC.  I have over 10 years of IT experience and enjoy developing websites with an eye for responsive design.  Languages and frameworks include HTML, CSS, JavaScript, jQuery, and Bootstrap.</p>
+      </div>
+    </div>
     <div class="jumbotron background-pic" id="portfolio">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <img id="myphoto" src="">
+        <h1>Portfolio</h1>
+        <h4>Some of my past projects.</h4>
+      </div>
+    </div>
+    <div class="jumbotron background-pic" id="contact">
+      <div class="container">
+        <img id="myphoto" src="">
+        <p>Please get in touch with any questions you may have.  I look forward to hearing from you!</p>
+        <a mailto='jason@thejasonfile.com'>jason@thejasonfile.com</a>
+        <ul>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-twitter"></i>Twitter</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-github-alt"></i>GitHub</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-linkedin"></i>LinkedIn</a></li>
+          <li><a class="btn btn-primary btn-lg" href="#" role="button"><i class="fa fa-fire"></i>FreeCodeCamp</a></li>
+        </ul>
       </div>
     </div>
 
     <div class="container">
     <footer>
-      <p>&copy; Company 2014</p>
+      <p>&copy; Jason Arnold 2015.  All Rights Reserved.</p>
     </footer>
     </div> <!-- /container -->
 
